# stm32-esp_pressure_adc-Private

./: .gitignore  adc_raw_00000 (1).json  adc_raw_00002.json  adc_raw_00005.json  adc_raw_00007.json
adc_raw_00000 (1)_decoded/: adc_raw_00000 (1)_summary.json
adc_raw_00002_decoded/: adc_raw_00002_summary.json
adc_raw_00005_decoded/: adc_raw_00005_summary.json
adc_raw_00007_decoded/: adc_raw_00007_samples.csv  adc_raw_00007_summary.json
docs/: 60-stm32-probes.rules.sample  stm32-vscode-setup.md
esp-pilot/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32s3
esp-pilot/main/: CMakeLists.txt  Kconfig.projbuild  adc_link_protocol.c  adc_logger.c  app_main.c  idf_component.yml  web_server.c  wifi_ap.c
esp-pilot/main/include/: adc_link_protocol.h  adc_logger.h  web_server.h  wifi_ap.h
esp-pilot/main/web/: app.js  index.html  style.css
scripts/adc/: decode_adc_capture.py
scripts/stm32/: build.sh  check-env.sh  flash-cubeprog.sh  flash-jlink.sh  flash-openocd.sh  flash-pyocd.sh
stm_adc_pressure/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  STM32F407XX_FLASH.ld  stm_adc_pressure.ioc
stm_adc_pressure/User/: CMakeLists.txt
stm_adc_pressure/User/App/Inc/: app_main.h
stm_adc_pressure/User/App/Src/: app_main.c
stm_adc_pressure/User/Components/Inc/: comp_oled.h
stm_adc_pressure/User/Components/Src/: comp_oled.c
stm_adc_pressure/User/Drivers/Inc/: drv_esp_link.h  drv_keys.h  drv_oled_bus.h  drv_uart_log.h
stm_adc_pressure/User/Drivers/Src/: drv_esp_link.c  drv_keys.c  drv_oled_bus.c  drv_uart_log.c
(+38 files in other folders)
